_sass/base/reset.scss
* {
  box-sizing: border-box;
}

img {
  vertical-align: middle;
}

html {
  font-family: 'Museo Sans Cyrl', sans-serif;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: .05em;
  color : #38343E;
}

body {
  width: 100%;
  min-width: 320px;
}

div {
  display: block;
}

button {
  outline: none;
  border: 0;
  cursor: pointer;
}

a {
  cursor: pointer;
  text-decoration: none;
}

p {
  line-height: 1.5;
  margin: 0 0 .6em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

input:focus,
button:focus,
textarea:focus {
  outline: none;
}

